--- a/index.html
+++ b/index.html
@@ -5,12 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>mugix</title>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script src="custom.js"></script>
 </head>
 <body>
-  <header>
-
+  <header class="header-color">
+    <div class="logo">MUGIX</div>
+    <button class="hamburger-menu" id="js-hamburger-menu">
+      <span class="hamburger-menu_bar"></span>
+      <span class="hamburger-menu_bar"></span>
+      <span class="hamburger-menu_bar"></span>
+    </button>
+    <nav class="navigation">
+      <ul class="navigation_list">
+        <li class="navigation_list-item"><a href="#" class="navigation_link">会社情報</a></li>
+        <li class="navigation_list-item"><a href="#" class="navigation_link">事業紹介</a></li>
+        <li class="navigation_list-item"><a href="#" class="navigation_link">お知らせ</a></li>
+        <li class="navigation_list-item"><a href="#" class="navigation_link">お問い合わせ</a></li>
+      </ul>
+    </nav>
   </header>
-  mugix
+  <div class="container">
+    <div class="blank-screen"></div>
+    <div class="pop">
+      <img src="images/mugi.png" class="pop-image">
+      <div class="pop-text">MUGIX</div>
+    </div>
+    <div class="blank-screen"></div>
+  </div>
 
   <footer>
 
