--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       </ul>
     </nav>
   </header>
+  <div class="smoke-top"></div>
+  <div class="smoke-bottom"></div>
   <div class="container">
     <div class="blank-screen"></div>
     <div class="pop">
@@ -32,6 +34,9 @@
       <div class="pop-text">MUGIX</div>
     </div>
     <div class="blank-screen"></div>
+    <div class="blank-screen"></div>
+    <div class="huge cyan">WEB</div>
+    <div class="huge cyan">DESIGN</div>
   </div>
 
   <footer>
