--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   -->
 </head>
 <body class="media">
-  <!-- ヘッダー -->
+  <!-- header -->
   <header class="header-color">
     <div class="logo">MUGIX DESIGN</div>
     <button class="hamburger-menu" id="js-hamburger-menu">
@@ -36,12 +36,11 @@
       </ul>
     </nav>
   </header>
-  <!-- スモーク -->
+  <!-- smoke -->
   <div class="smoke-top"></div>
   <div class="smoke-bottom"></div>
-  <!-- コンテナ -->
   <div class="container">
-    <!-- クライマー -->
+    <!-- climber -->
     <div class="rope">
       <div class="climber-frame">
         <div class="climber"></div>
@@ -51,69 +50,101 @@
     <div class="area-top">
     </div>
     <div class="area" id="background-color-on">
-      <img src="images/mugix-title.svg" class="inview-appear is-disappear" style="width: 100%;">
+      <img src="images/mugix-title.svg" class="is-disappear" style="width: 100%;" id="title">
+      <img src="images/wani.svg" class="inview-wani" style="width: 50%; position: absolute; top: -30px;">
+      <img src="images/kirin.svg" class="inview-kirin" style="width: 40%; position: absolute; bottom: -20%; left: -50%;">
     </div>
     <div class="area-horizon">
       <div style="width: 60%;">
         <img src="images/mugi-3.svg" class="shake" id="mugi-button">
         <img src="images/push.svg" class="push">
       </div>
-      <div class="mugi-selif" style="width: 40%;">大吉</div>
+      <div class="mugi-selif" style="width: 40%;"></div>
     </div>
-    <div class="area" style="margin-bottom: 48px;">
-      <div class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 2;">いらっしゃいませ！<br>
+    <div class="area" id="background-color-on" style="margin-bottom: 32px;">
+      <img src="images/logo-moji.svg" style="width: 50%; float: right; margin-right: 10%;">
+      <div class="palette" style="animation: rotate-anim 20s linear infinite;">
+        <button class="bg-button" style="background-color: red; transform: translate(-50%, 80%);"></button>
+        <button class="bg-button" style="background-color: blue; transform: translate(-50%, -180%);"></button>
+        <button class="bg-button" style="background-color: green; transform: translate(60%, 15%);"></button>
+        <button class="bg-button" style="background-color: yellow; transform: translate(60%, -115%);"></button>
+        <button class="bg-button" style="background-color: yellow; transform: translate(-160%, -115%);"></button>
+        <button class="bg-button" style="background-color: green; transform: translate(-160%, 15%);"></button>
+      </div>
+    </div>
+    <div class="area-orange" style="margin-bottom: 48px;">
+      <div class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 1.8; color: white;">いらっしゃいませ！<br>
         ここはMUGIX DESIGNでございます<br><br>サイト制作の紹介やお問い合わせと同時に、実例の見本にもなっております<br>
-        お客様のプランのご参考にいかがでしょうか？<br>なお、クリックやタッチのできるところがいくつかございます<br>
+        お客様のプランのご参考にいかがでしょうか？<br>なお、クリックのできるところがいくつかございます<br>
         どうぞごゆっくりお楽しみ下さい
       </div>
+      <img src="images/ink.svg" class="inview-appear is-disappear" style="width: 40%; max-width: 300px; position: absolute; bottom: -20%; right: 0;">
     </div>
     <!-- about_us -->
     <div class="area" style="margin-bottom: 24px; margin-top: 64px;">
-      <img src="images/about-us.svg" class="inview-appear is-disappear" style="width: 80%; margin: 0 auto; display: block;">
-      <p style="text-align: center;" class="inview-appear is-disappear">〜ムギックスについて〜</p>
+      <img src="images/about-us.svg" class="is-disappear subtitle" id="about-us">
+      <img src="images/rakko.svg" class="inview-rakko" style="width: 50%; position: absolute; top: -70px; left: -50%;">
+      <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜ムギックスについて〜</p>
     </div>
+    <img src="images/bee.svg" id="bee" style="width: 25%; position: absolute; z-index: 10;">
     <div class="area">
       <div style="display: flex; flex-direction: row;">
         <div class="text-box inview fade-in-bottom" style="writing-mode: vertical-rl; margin-top: auto;">
           ムギックス<br>&emsp;ウェブデザイナー<br>仕事<br>
-          &emsp;企業やお店のサイト制作<br>&emsp;オシャンティなサイト制作<br>&emsp;遊び心のあるサイト制作
+          &emsp;企業やお店のサイト制作<br>&emsp;オシャレなサイト制作<br>&emsp;遊び心のあるサイト制作
         </div>
         <div class="area-vertical" style="width: 60%;">
-          <img src="images/garbera-4.svg" class="inview fade-in-right" style="width: 70%; animation: rotate-anim 18s linear infinite;">
-          <img src="images/garbera-6.svg" class="inview fade-in-right" style="width: 80%; margin-left: auto; animation: rotate-anim 12s linear infinite;">
+          <img src="images/flower-p.svg" id="flower1" class="inview fade-in-right" style="width: 70%; animation: rotate-anim 18s linear infinite;">
+          <img src="images/flower-w.svg" id="flower2" class="inview fade-in-right" style="width: 80%; margin-left: auto; animation: rotate-anim 12s linear infinite;">
         </div>
       </div>
       <div style="display: flex; flex-direction: row; margin-bottom: 24px;">
         <div class="area-vertical" style="width: 60%;">
-          <img src="images/garbera-5.svg" class="inview fade-in-left" style="width: 65%; animation: rotate-anim 9s linear infinite;">
-          <img src="images/garbera-1.svg" class="inview fade-in-left" style="width: 90%; margin-left: auto; animation: rotate-anim 20s linear infinite;">
+          <img src="images/flower-b.svg" id="flower3" class="inview fade-in-left" style="width: 65%; animation: rotate-anim 9s linear infinite;">
+          <img src="images/flower-y.svg" id="flower4" class="inview fade-in-left" style="width: 90%; margin-left: auto; animation: rotate-anim 20s linear infinite;">
         </div>
         <div class="text-box inview fade-in-bottom" style="writing-mode: vertical-rl; margin-top: auto; padding: 12px 16px 12px 10px; font-size: 1.8em;">
           <div class="text-box inview fade-in-bottom" style="position: absolute; right: -30px; font-size: 0.5em;">
             コンセプト
           </div>
-          速い、安い、上手い
+          速い、安い、ウマい
         </div>
       </div>
     </div>
     <div class="area" style="margin-bottom: 48px;">
-      <div class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 2;">いらっしゃいませ！<br>
-        ここはMUGIX DESIGNでございます<br><br>サイト制作の紹介やお問い合わせと同時に、実例の見本にもなっております<br>
-        お客様のプランのご参考にいかがでしょうか？<br>なお、クリックやタッチのできるところがいくつかございます<br>
-        どうぞごゆっくりお楽しみ下さい
+      <div class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 2;">ホームページを作った事はありますか？<br>
+        今やホームページを作ることは難しいことではありません<br><br>HTMLやCSSを触らなくても簡単に作るツールはたくさんありますし、SEOやSSLもほとんどセットで簡単に導入できます<br><br>
+        しかしツールを使うにも初めてだと時間や手間はかかってしまいますし<br>サイトを作ってるうちに『もっとオシャレにしたい』などの気持ちになることもあります<br><br>
+        そんな時はお任せ下さい！<br>シンプルで見やすいホームページでもオシャレなホームページでも皆さんのご要望を叶えます<br>
       </div>
     </div>
-    <video style="width: 90%; margin: 16px 5%;border-radius: 16px; border: 5px double black;" autoplay loop>
+    <div style="margin-left: 5%;">ムービー</div>
+    <video style="width: 90%; margin: 16px 5%; border-radius: 16px; border: 5px double black;" autoplay loop>
       <source src="movies/footprint.mp4" type="video/mp4">
     </video>
+    <div style="margin-left: 5%;">ミニゲーム</div>
+    <div class="area-horizon" style="width: 90%; height: 200px; margin: 16px 5%;">
+      <div style="display: flex; flex-wrap: wrap; width: 50%;">
+        <div class="game-frame"><div class="game-button" id="ann-game1"></div></div>
+        <div class="game-frame"><div class="game-button" id="ann-game2"></div></div>
+        <div class="game-frame"><div class="game-button" id="ann-game3"></div></div>
+        <div class="game-frame"><div class="game-button" id="ann-game4"></div></div>
+      </div>
+      <div style="position: relative; width: 50%;">
+        <img src="images/nice-anchan.svg" id="annchan" style="width: 100%; position: absolute; bottom: -30%; right: -120%; transition: 1s;">
+      </div>
+    </div>
     <!-- workflow -->
     <div class="area" style="margin-bottom: 24px; margin-top: 64px;">
-      <img src="images/workflow.svg" class="inview-appear is-disappear" style="width: 80%; margin: 0 auto; display: block;">
-      <p style="text-align: center;" class="inview-appear is-disappear">〜完成までの流れ〜</p>
+      <div class="bird-slider">
+        <img src="images/bird.svg" style="position: absolute; width: 80%; top: 50%; left: 50%; z-index: 35;">
+      </div>
+      <img src="images/workflow.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
+      <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜完成までの流れ〜</p>
     </div>
     <!-- meeting -->
-    <div style="margin-bottom: 32px;" class="inview-appear is-disappear">
-      <div class="pop-sub">Meeting</div>
+    <div style="margin-bottom: 32px; padding: 4px;" class="area-orange">
+      <div class="pop-sub inview fade-in-bottom">まずはご相談から</div>
     </div>
     <div class="area-vertical" style="margin-bottom: 64px;">
       <div class="area">
@@ -121,7 +152,7 @@
       </div>
       <div class="area">
         <div class="text-box inview fade-in-right"style="width: 60%;">
-          お問い合わせのメールを送って頂いた後はまずは打ち合わせの日程を決めましょう<br>時間さえ合えば、その日でも大丈夫です
+          お問い合わせ頂いた後はまずは打ち合わせの日程を決めましょう<br>時間さえ合えば、その日でも大丈夫です
         </div>
       </div>
       <div class="area">
@@ -144,8 +175,8 @@
       </div>
     </div>
     <!-- create -->
-    <div style="margin-bottom: 32px;" class="inview-appear is-disappear">
-      <div class="pop-sub">Create</div>
+    <div style="margin-bottom: 32px; padding: 4px;" class="area-orange">
+      <div class="pop-sub inview fade-in-bottom">制作と修正</div>
     </div>
     <div class="area-vertical" style="margin-bottom: 64px;">
       <div class="area">
@@ -177,8 +208,8 @@
       </div>
     </div>
     <!-- completed -->
-    <div style="margin-bottom: 32px;" class="inview-appear is-disappear">
-      <div class="pop-sub">Completed</div>
+    <div style="margin-bottom: 32px; padding: 4px;" class="area-orange">
+      <div class="pop-sub inview fade-in-bottom">完成！</div>
     </div>
     <div class="area-vertical" style="margin-bottom: 64px;">
       <div class="area">
@@ -187,12 +218,12 @@
       <div class="area">
         <div class="text-box inview fade-in-right"style="width: 60%;">
           出来上がったサイトをサーバー上にアップして公開します<br>
-          ドメインの設定やメールアドレスの設定などもここで行います
+          希望があればドメインの設定やメールアドレスの設定などもここで行います
         </div>
       </div>
       <div class="area">
         <div class="text-box inview fade-in-left" style="width: 80%; margin-left: auto;">
-          アクセス解析の方法、CMSの場合は記事やニュースの更新方法などサイトの使い方、運用方法もここでレクチャーします
+          アクセス解析の方法、CMSの場合は記事やページの更新方法などサイトの使い方、運用方法もここでレクチャーします
         </div>
       </div>
       <div class="area">
@@ -201,8 +232,8 @@
     </div>
     <!-- prices -->
     <div class="area" style="margin-bottom: 24px; margin-top: 64px;">
-      <img src="images/about-us.svg" class="inview-appear is-disappear" style="width: 80%; margin: 0 auto; display: block;">
-      <p style="text-align: center;" class="inview-appear is-disappear">〜メニュー〜</p>
+      <img src="images/menu.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
+      <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜メニュー〜</p>
     </div>
     <div class="plan-slider">
       <div class="plan">a</div>
@@ -210,22 +241,30 @@
       <div class="plan">c</div>
     </div>
     <div class="area" style="margin-bottom: 24px; margin-top: 64px;">
-      <img src="images/about-us.svg" class="inview-appear is-disappear" style="width: 80%; margin: 0 auto; display: block;">
-      <p style="text-align: center;" class="inview-appear is-disappear">〜メニュー〜</p>
+      <img src="images/contact.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
+      <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜お問い合わせ〜</p>
     </div>
-  <!--
-      <div class="bird-slider">
-        <img src="images/bird.svg" class="bird-1">
-        <img src="images/bird.svg" class="bird-2">
-        <img src="images/bird.svg" class="bird-3">
+    <div class="area" style="margin-bottom: 48px;">
+      <div class="text-hor inview fade-in-bottom" style="margin: 0 25% 0 4%; line-height: 2;">
+        お問い合わせはLINEのMUGIX公式アカウントからメッセージを送って下さい<br>
+        お見積もりや質問など、お気軽にご相談ください<br><br>
+        以下のQRコードを読み込むか<br>スマートフォンだと「友だち追加」ボタンからでも追加できます
       </div>
     </div>
-  -->
+    <div class="area">
+      <img src="https://qr-official.line.me/gs/M_713uwqqm_GW.png?oat_content=qr" style="margin: 0 30% 0 4%; width: 50%; border: 3px solid #48575e; border-radius: 8px;">
+    </div>
+    <div class="area">
+      <a href="https://lin.ee/QZJ1BCv">
+        <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" style="height: 50px; border: 3px solid #48575e; margin-left: 10%; border-radius: 8px;">
+      </a>
+    </div>
+    <div class="area" style="height: 300px;"></div>
+    <div class="area-footer" style="z-index: 0;">
+      Copyright © 2024~ MUGIX. All rights reserved. 
+    </div>
   </div>
-
-  <footer>
-
-  </footer>
+  <footer></footer>
   <!-- js -->
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="js/jquery.inview.min.js"></script>
