--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>mugix</title>
+  <meta name="description" content="オシャレで遊びゴコロのあるホームページを作ります">
+  <title>MUGIX DESIGN</title>
+  <link rel="icon" href="images/favicon.png">
+  <link rel="apple-touch-icon" href="images/apple-touch-icon.png" sizes="180x180">
+  <link rel="icon" type="image/png" href="images/android-touch-icon.png" sizes="192x192">
   <!--
   <link rel="stylesheet" type="text/css" href="css/slick.css">
   <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
@@ -68,13 +72,13 @@
       <div class="mugi-selif" style="width: 30%;"></div>
     </div>
     <div class="area" id="background-color-on" style="margin-bottom: 160px; height: 600px;">
-      <h1 class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 1.8; font-size: 1.2em;">
+      <div class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 2; ">
         このサイトは制作の紹介やお問い合わせと同時に、実例の見本にもなっております<br>
         お客様のプランのご参考にいかがでしょうか？<br>なお、クリックのできるところがいくつかございます<br>
         どうぞごゆっくりお楽しみ下さい
-        <div style="text-align: right; margin-top: 8px;"><a href="#" class="button">問い合わせ</a></div>
-      </h1>
-      <img src="images/bg-title.svg" class="palette-re" style="animation: rotate-anim 15s linear infinite reverse;">
+        <div style="text-align: right; margin-top: 8px;"><a href="#contact" class="button">問い合わせ</a></div>
+      </div>
+      <img src="images/bg-title.svg" class="palette-re" style="animation: rotate-anim 15s linear infinite reverse; pointer-events: none;">
       <div class="palette" style="animation: rotate-anim 20s linear infinite;">
         <button id="bg-1" class="bg-button" style="background-image: url('images/bg-water.svg'); transform: translate(-50%, 80%);"></button>
         <button id="bg-2" class="bg-button" style="background-image: url('images/bg-green.svg'); transform: translate(-50%, -180%);"></button>
@@ -117,11 +121,11 @@
       </div>
     </div>
     <div class="area" style="margin-bottom: 48px;">
-      <h1 class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 1.8; font-size: 1.2em;">ホームページを作った事はありますか？<br>
+      <div class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 2;">ホームページを作った事はありますか？<br>
         今やホームページを作ることは難しいことではありません<br><br>HTMLやCSSを触らなくても簡単に作るツールはたくさんありますし、SEOやSSLもほとんどセットで簡単に導入できます<br><br>
         しかしツールを使うにも初めてだと時間や手間はかかってしまいますし<br>サイトを作ってるうちに『もっとオシャレにしたい』などの気持ちになることもあります<br><br>
         そんな時はお任せ下さい！<br>シンプルで見やすいホームページでもオシャレなホームページでも皆さんのご要望を叶えます<br>
-      </h1>
+      </div>
     </div>
     <div style="margin-left: 5%;">ムービー</div>
     <video style="width: 90%; margin: 16px 5%; border-radius: 16px; border: 5px double black;" autoplay loop>
@@ -249,7 +253,8 @@
       <div class="plan">b</div>
       <div class="plan">c</div>
     </div>
-    <div class="area" style="margin-bottom: 24px; margin-top: 64px;">
+    <!-- contact -->
+    <div id="contact" class="area" style="margin-bottom: 24px; margin-top: 64px;">
       <img src="images/contact.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
       <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜お問い合わせ〜</p>
     </div>
@@ -262,11 +267,11 @@
       </div>
     </div>
     <div class="area">
-      <img src="https://qr-official.line.me/gs/M_713uwqqm_GW.png?oat_content=qr" style="margin: 0 30% 0 4%; width: 50%; border: 3px solid #48575e; border-radius: 8px;">
+      <img src="https://qr-official.line.me/gs/M_713uwqqm_GW.png?oat_content=qr" style="margin: 0 30% 0 4%; width: 50%; border-radius: 8px;">
     </div>
     <div class="area">
       <a href="https://lin.ee/QZJ1BCv">
-        <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" style="height: 50px; border: 3px solid #48575e; margin-left: 10%; border-radius: 8px;">
+        <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" style="height: 50px; margin-left: 10%; border-radius: 24px;">
       </a>
     </div>
     <div class="area" style="height: 300px;"></div>
