--- a/index.html
+++ b/index.html
@@ -247,15 +247,44 @@
     <div class="plan-slider">
       <div class="plan">
         <img src="images/mugi-3.svg" class="plan-top">
-        <div class="plan-title">シンプルHP</div>
-        <div class="plan-title">¥30000</div>
+        <div class="plan-title">テンプレート</div>
+        <div class="plan-title">¥30,000</div>
+        <div style="text-align: center; margin-top: 8px;"><a href="#contact" class="button">詳しくはこちら</a></div>
       </div>
-      <div class="plan">b</div>
-      <div class="plan">c</div>
+      <div class="plan">
+        <img src="images/anchan.svg" class="plan-top">
+        <div class="plan-title">テンプレートCMS</div>
+        <div class="plan-title">¥50,000</div>
+        <div style="text-align: center; margin-top: 8px;"><a href="#contact" class="button">詳しくはこちら</a></div>
+      </div>
+      <div class="plan">
+        <img src="images/goma.svg" class="plan-top">
+        <div class="plan-title">カスタム</div>
+        <div class="plan-title">¥100,000〜</div>
+        <div style="text-align: center; margin-top: 8px;"><a href="#contact" class="button">詳しくはこちら</a></div>
+      </div>
+    </div>
+    <div class="option-slider">
+      <div class="option">
+        <div class="option-title" style="margin-top: 30%;">小規模な更新</div>
+        <div class="option-title">¥10,000</div>
+        <div style="text-align: center; margin-top: 8px;"><a href="#contact" class="button">詳しくはこちら</a></div>
+      </div>
+      <div class="option">
+        <div class="option-title" style="margin-top: 30%;">大規模な更新</div>
+        <div class="option-title">¥応相談</div>
+        <div style="text-align: center; margin-top: 8px;"><a href="#contact" class="button">詳しくはこちら</a></div>
+      </div>
+      <div class="option">
+        <div class="option-title" style="margin-top: 30%;">画像制作</div>
+        <div class="option-title">¥10,000</div>
+        <div style="text-align: center; margin-top: 8px;"><a href="#contact" class="button">詳しくはこちら</a></div>
+      </div>
     </div>
     <!-- contact -->
-    <div id="contact" class="area" style="margin-bottom: 24px; margin-top: 64px;">
+    <div id="contact" class="area" style="margin-bottom: 24px; margin-top: 64px;" id="contact">
       <img src="images/contact.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
+      <img src="images/goma.svg" class="inview-appear is-disappear shake" style="width: 40%; position: absolute; bottom: 0; left: -10%;">
       <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜お問い合わせ〜</p>
     </div>
     <div class="area" style="margin-bottom: 48px;">
@@ -267,15 +296,18 @@
       </div>
     </div>
     <div class="area">
-      <img src="https://qr-official.line.me/gs/M_713uwqqm_GW.png?oat_content=qr" style="margin: 0 30% 0 4%; width: 50%; border-radius: 8px;">
+      <img src="https://qr-official.line.me/gs/M_713uwqqm_GW.png?oat_content=qr" style="margin: 0 30% 0 4%; width: 50%; max-width: 200px; border-radius: 8px;">
     </div>
     <div class="area">
       <a href="https://lin.ee/QZJ1BCv">
         <img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" style="height: 50px; margin-left: 10%; border-radius: 24px;">
       </a>
     </div>
-    <div class="area" style="height: 300px;"></div>
+    <div class="area" style="margin-bottom: 64px;">
+      <img src="images/spray.svg" class="inview-appear is-disappear" style="width: 80%;">
+    </div>
     <div class="area-footer" style="z-index: 0;">
+      <img src="images/ink.svg" style="width: 150px; position: absolute; left: 0; top: -100px;">
       Copyright © 2024~ MUGIX. All rights reserved. 
     </div>
   </div>
